# CS_Assignment2b

./: CMakeLists.txt  README.md
ConsoleApp/: Client.cpp  ConsoleApp.cpp  ConsoleApp.h  Main.cpp  Server.cpp  Server.h  Socket.cpp  Socket.h  consoleApp.cpp
UploadServer/: HttpServlet.cpp  HttpServlet.h  HttpServletRequest.cpp  HttpServletRequest.h  HttpServletResponse.cpp  HttpServletResponse.h  Socket.cpp  Socket.h  UploadServer.cpp  UploadServer.h  UploadServerThread.cpp  UploadServerThread.h  UploadServlet.cpp  UploadServlet.h
uploads/: Filler.txt
